--- a/app/src/main/assets/html/1.html
+++ b/app/src/main/assets/html/1.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+/* 当时为了防止我们那个逼老师说东西太少，做了个开屏启动的网页浏览。*/
+/*WEBVIEW，但是这东西在AS模拟器里边用开几次可能就会卡，所以如果觉得没用可以删掉，内容是一个樱花飘落的特效，一些个人博客上也经常有用的 */
+/*这个页面可以单独拿走去用，套网页上啥的，这里就是为了用而用而已*/
 <html lang="en">
 <head>
     <meta charset="UTF-8">
